--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -6,11 +6,9 @@ find_package(YARP)
 
 include_directories(${YARP_INCLUDE_DIRS})
 
-add_executable(test test.cpp)
+add_executable(sender sender.cpp)
+target_link_libraries(sender ${YARP_LIBRARIES})
 
-target_link_libraries(test ${YARP_LIBRARIES})
-
-install(TARGETS test
-	RUNTIME DESTINATION 	${CMAKE_CURRENT_SOURCE_DIR}/../bin)
-
+add_executable(receiver receiver.cpp)
+target_link_libraries(receiver ${YARP_LIBRARIES})
 
